# ik_ws

./: .gitignore  README.md  \  craneuorover_arm_L1L5_10000_1.000000_4.000000.ikcache  craneuorover_arm_L1L5_5000_1.000000_1.000000.ikcache  gitignore  rmmuorover_arm_L1L5_10000_1.000000_4.000000.ikcache  rmmuorover_arm_L1L5_5000_1.000000_1.000000.ikcache
.cache/clangd/index/: BenchmarkExecutor.cpp.CE2AC3C9E97A837F.idx  BenchmarkExecutor.h.C7FCC5BC70EBE8B6.idx  BenchmarkOptions.cpp.4A98F40133DB75B4.idx  BenchmarkOptions.h.458429CD99CDC3C7.idx  CombinePredefinedPosesBenchmark.cpp.E6998304E869A55C.idx  ControllerHandle.h.18A8501A6E410AAB.idx  GreedyKCenters.h.8F75796B7B78D411.idx  NearestNeighbors.h.30317DF2C4162F3E.idx  NearestNeighborsGNAT.h.B91D2DFD11A7AE65.idx  RunBenchmark.cpp.CF5BEF500C763C92.idx  aabb.cpp.DE0A9075B5EED62F.idx  aabb.h.FB33ABBD971DA248.idx  action_based_controller_handle.h.8EDDE58F21F646E7.idx  action_based_controller_handle.h.E7D9A1BCDFCD3AD9.idx  add_iterative_spline_parameterization.cpp.AC94C58CEAB74DD9.idx  add_ruckig_traj_smoothing.cpp.E77887DED9AC3DCB.idx  add_time_optimal_parameterization.cpp.697C7306E5744EB5.idx  add_time_parameterization.cpp.405C7974EDEF94E5.idx  alternative_path_costs.cpp.D6E2482FAC71B27C.idx  apply_planning_scene_service_capability.cpp.96F76AAEE1657A89.idx  apply_planning_scene_service_capability.h.EE3E0ECD9F0262D7.idx  attached_body.cpp.C744F948DDCC6571.idx  attached_body.h.4752F6468676F93A.idx  attached_body.h.90B093849E72F3E6.idx  author_information.cpp.3ACCFD3ECA40A28B.idx  author_information.hpp.9B8879A1329CBC39.idx  author_information_widget.cpp.6C6D7E03CE2FF2D2.idx  author_information_widget.hpp.E3EF7845D8EBA7B3.idx  background_processing.cpp.61D261A0D4942743.idx  background_processing.hpp.BD02F655A161F00F.idx  basecmd.h.5A3E7770FF4AC5C0.idx  basecmd.h.5DB80B24DE75EB3C.idx  basic_types.h.ACEDBA13227485F4.idx  benchmark_ik.cpp.8C0CCBA418F73F24.idx  broadcast.cpp.102BE9D22C8345CA.idx  bullet_bvh_manager.cpp.F5445DCFB15B9FE4.idx  bullet_bvh_manager.h.D229F8E736D95F9E.idx  bullet_cast_bvh_manager.cpp.9F0655DB000B5624.idx  bullet_cast_bvh_manager.h.A11AEF87493A46C2.idx  bullet_discrete_bvh_manager.cpp.7EF2E5628F1AA757.idx  (+1136 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_control_demo_example_7/share/ros2_control_demo_example_7/: local_setup.sh  package.sh
install/uorover_arm/share/uorover_arm/: launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uorover_ik/lib/uorover_ik/: uorover_ik
install/uorover_ik/share/uorover_ik/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uorover_moveit_config/share/uorover_moveit_config/: .setup_assistant  local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/.cache/clangd/index/: aabb.cpp.DE0A9075B5EED62F.idx  aabb.h.FB33ABBD971DA248.idx  attached_body.cpp.C744F948DDCC6571.idx  attached_body.h.4752F6468676F93A.idx  basic_types.h.ACEDBA13227485F4.idx  bullet_bvh_manager.cpp.F5445DCFB15B9FE4.idx  bullet_bvh_manager.h.D229F8E736D95F9E.idx  bullet_cast_bvh_manager.cpp.9F0655DB000B5624.idx  (+185 more)
src/uorover_arm/: setup.cfg  setup.py
src/uorover_arm/launch/: launch.py
src/uorover_arm/urdf/: crane.urdf
src/uorover_ik/: CMakeLists.txt  rmm_hardware.xml
src/uorover_ik/hardware/: rmm_hardware.cpp
src/uorover_ik/hardware/include/uorover_ik/: rmm_hardware.hpp
src/uorover_ik/launch/: ik.launch.py
src/uorover_ik/rmm_hardware/: rmm_hardware.cpp
src/uorover_ik/rmm_hardware/include/rmm_hardware/: rmm_hardware.hpp
src/uorover_ik/src/: ik_hardware_interface.cpp  uorover_ik.cpp
src/uorover_moveit_config/: CMakeLists.txt  package.xml
src/uorover_moveit_config/config/: crane.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  rmm.urdf.xacro  ros2_controllers.yaml
src/uorover_moveit_config/launch/: move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+32 files in other folders)
